--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--INICIO HEADER-->
     <header>
         <div class="container-fluid">
-            <div class="row">
+            <div>
                 <div class="col-lg-12 col-xs-12 backgroundNav">
                     <nav class="navbar navbar-expand-lg navbar-light header__navbar--font ">
                         <a class="navbar-brand" href="#">Bakery</a>
