modificación del footer

--- a/index.html
+++ b/index.html
@@ -110,35 +110,17 @@
     <!--FIN CONTENIDO-->
 
     <!--INICIO FOOTER-->
-    <footer class="container"> 
-        <div class="row gridFooter estiloFooter">
-            <div class="col-xs-12 gridFooterTitulos1">
-                <h3>contacto</h3>
-            </div>
-            <div class="col-xs-12 footerMail">
-                <h5><img src="assets/img/icon/email.png" alt="" width="15px">bakery@gmail.com</h5>
-                <h5><img src="assets/img/icon/telefono.png" alt="" width="15px">+54 9 1111111111</h5>
-            </div>
-            <div class="col-xs-12 gridFooterTitulos2">
-                <h3>redes sociales</h3>
-            </div>
-            <div class="col-xs-12 FooterRedes">
-                <h5><img src="assets/img/icon/instagram.png" alt="" width="15px">@bakery</h5>
-                <h5><img src="assets/img/icon/twitter.png" alt="" width="15px">@bakery</h5>
-                <h5><img src="assets/img/icon/facebook.png" alt="" width="15px">Bakery</h5>
-            </div>
-            <div class="col-xs-12 gridFooterTitulos3">
-                <h3>newsletter</h3>
-            </div>
-            <div class="col-xs-12 footerNews">
-                <form action="#">
-                    <input type="text" placeholder="E-mail">
-                    <input class="enviar" type="submit" value="ENVIAR">
-                </form>
-            </div>
-        </div>       
-    </footer>
- 
+    <footer class="gridFooter">
+        <div class="footer__redes--ubicacion">
+            <img src="assets/img/icon/facebook.png" alt="" width="30px">
+            <img src="assets/img/icon/instagram.png" alt="" width="30px">
+            <img src="assets/img/icon/twitter.png" alt="" width= "30px">
+        </div>
+
+        <div class="footer__copyright--font">
+            <p>Copyright © 2021 Camila Ossola.</p>
+        </div>
+    </footer> 
     <!--FIN FOOTER-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
