--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-xs-12">
+                <div class="col-lg-12 col-xs-12 desktop">
                     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -71,22 +71,67 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="assets/img/inicio/slide1.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/img/inicio/slide1.jpg" class="d-block w-100" alt="..." width="100%">
                             <div class="carousel-caption d-none d-md-block backgroundCarousel">
                               <h5 class="carTitulo"><a href="views/locales.html">Nuestro locales</a></h5>
                               <p>Tituloboriosam sit blanditiis explicabo earum. Beatae tenetur corrupti necessitatibus!</p>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="assets/img/inicio/slide2.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/img/inicio/slide2.jpg" class="d-block w-100" alt="..." width="100%">
                             <div class="carousel-caption d-none d-md-block backgroundCarousel">
                               <h5 class="carTitulo"><a href="views/productos.html">Nuestros productos</a></h5>
                               <p>Titulorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="assets/img/inicio/slide3.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/img/inicio/slide3.jpg" class="d-block w-100" alt="..." width="100%">
                             <div class="carousel-caption d-none d-md-block backgroundCarousel">
+                              <h5 class="carTitulo"><a href="views/blog.html">Beneficios del café</a></h5>
+                              <p>Tituloidem enim veniam vero ratione nihil illo modi dolore alias omnis.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-xs-12 mobile">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="assets/img/inicio/slide1b.jpg" class="d-block w-100" alt="..." width="100%">
+                            <div class="carousel-caption backgroundCarousel">
+                              <h5 class="carTitulo"><a href="views/locales.html">Nuestro locales</a></h5>
+                              <p>Tituloboriosam sit blanditiis explicabo earum. Beatae tenetur corrupti necessitatibus!</p>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/img/inicio/slide2b.jpg" class="d-block w-100" alt="..." width="100%">
+                            <div class="carousel-caption backgroundCarousel">
+                              <h5 class="carTitulo"><a href="views/productos.html">Nuestros productos</a></h5>
+                              <p>Titulorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/img/inicio/slide3b.jpg" class="d-block w-100" alt="..." width="100%">
+                            <div class="carousel-caption backgroundCarousel">
                               <h5 class="carTitulo"><a href="views/blog.html">Beneficios del café</a></h5>
                               <p>Tituloidem enim veniam vero ratione nihil illo modi dolore alias omnis.</p>
                             </div>
